examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/is_zero_bool_reconstruct.st
language core;

extend with #type-reconstruction;

fn main(n : Nat) -> Bool {
    return if Nat::iszero(true) then false else true
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
